Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10713

signal 11 error on multi-table update - crash in handler::increment_statistics or in make_select or assertion failure pfs_thread == ((PFS_thread*) pthread_getspecific((THR_PFS)))

    XMLWordPrintable

Details

    • 10.1.18, 10.1.20

    Description

      I got signal 11 error, when I execute the query through HeidiSQL tool.
      But It didn't happen error executing through mysql client in server and toad tool.
      I attached my.cnf , mysqld.err log and the query for test.
      Why did it happen in HeidiSQL ? This tool version is 9.3.0.4984.
      Thanks.

      Attachments

        1. fortestquery.sql
          1.0 kB
        2. my_cnf.txt
          7 kB
        3. mysqld_err.txt
          5 kB

        Activity

          People

            sanja Oleksandr Byelkin
            gks3117 sungwon.han
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.